# cargo-vendor-checksum

./: Cargo.toml  LICENSE  README.md  cargo-vendor-checksum.spec
src/: main.rs
