[package]
name = "cargo-vendor-checksum"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Gordeev <obirvalger@altlinux.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
sha256 = "1"
clap = { version = "4", features = ["color"] }
clap_builder = { version = "4", features = ["color"] }
clap_derive = "4"
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
